# skill-eval

./: .gitignore  README.md  pyproject.toml  taxonomy.yaml
.github/prompts/: skill-eval.prompt.md
examples/: eval.example.yaml
skill/: SKILL.md
src/skill_eval/: aggregate.py  api_client.py  cli.py  completion.py  config.py  gencases.py  runner.py  taxonomy.yaml
src/skill_eval/scorers/: deterministic.py  judge.py
tests/: test_aggregate.py  test_api_client.py  test_config.py  test_gencases.py  test_runner.py  test_scorers.py
