[project]
name = "skill-eval"
version = "0.2.0"
description = "A/B evaluation pipeline for Claude Code skills: run test cases headlessly, score with deterministic metrics and blind LLM judges, aggregate an uplift report."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
skill-eval = "skill_eval.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
